# gatorseq_linux_code

./: .gitignore  EPIC_upload.py  EPIC_upload.py.log.txt  EPIC_windows_upload.py  Illumina_BaseSpace_CLI.txt  OLD_gatorseq_fastq_to_analyze.py  PGX_upload.py  QCI_download.py  QCI_download.py.log.txt  QCI_upload.py  QCI_upload.py.log.txt  QCI_windows_download.py  QCI_windows_upload.py  corona-test.py  crontab_cmds.txt  db-to-excel.py  excel-to-db.py  gatorseq_crontab_jobs_prod.sh  gatorseq_db_to_excel.py  gatorseq_fastq_to_analyze.py  gatorseq_fastq_to_analyze.py.log.txt  gatorseq_input_excel_to_db.py  hl7update.py  illumina.py  linux_gatorseq.config.yaml  merger_fastq_sarcoma.sh  pandas_gatorseq_fastq_to_analyze.py  rsync_fastq.sh  rsync_fastq.sh.log.txt  rsync_output.sh  rsync_output.sh.log.txt  rsync_output_rel.sh  rsync_output_rel.sh.log.txt  setup-sql.sql  sync_with_illumina_folder.py  windows_cron.py
COVID_19/: COVID_19_Epic_Upload.py  Comments_CDC_Clinical_MCDC1RNA.txt  Comments_CDC_Screening_MCDC1DIRECTPROT.txt  (+7 more)
NGS21/EPIC_updates/hl7conv/: CONTRIBUTING.md  README.md  setup.cfg
NGS21/EPIC_updates/hl7conv/.github/ISSUE_TEMPLATE/: issue-template.md
NGS21/EPIC_updates/hl7conv/docs/: API.rst  conf.py  index.rst
NGS21/EPIC_updates/hl7conv/hl7conv/: __init__.py  common.py  converter.py  hl7v2_helper.py  hl7v2_message_generator.py
NGS21/EPIC_updates/hl7conv/hl7conv/test/: Annotation_example_snpEff_ClinVar_b38.vcf  NB6TK328_annotations.txt  NB6TK328_conversion_region.bed  test_integration.py  test_unit.py  vcf_example1.vcf  vcf_example3.vcf  vcf_example4.vcf
(+36 files in other folders)
