# Changes required for PyPI
[metadata]:
name = hl7conv
version = 0.0.1
description = Convert .vcf and .xml files to HL7V2 message
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
author = ""
author_email = rohaninjmu@gmail.com
url = https://github.com/Rohan-cod/hl7conv
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
test_suite = hl7conv.test.test_hl7conv.suite
include_package_data = True
setup_requires =
    setuptools
packages = 
    hl7conv
    hl7conv.test
python_version = >=3.6
install_requires =
    Cython>=0.29.21
    hl7apy==1.3.4
    pysam
    pandas
    pytz>=2019.3
    pyVCF>=0.6.8
    pyranges>=0.0.96
tests_require =
    unittest
